# routes/users.js
@@ -2,6 +2,9 @@ const router = require('express').Router();
 const User = require('../models/User')
 const Account = require('../models/Account')
 const bcrypt = require('bcrypt')
+const {verifyToken} = require('../middlewares')
+const userModel = require('../models/User')
+const accountModel = require('../models/Account')
 
 router.post('/', async (req, res, next) => {
 
@@ -48,4 +51,19 @@ router.post('/', async (req, res, next) => {
         }
 })
 
+router.get('/current', verifyToken, async (req, res, next) => {
+
+    //Get user object from db
+    const user = await userModel.findOne({_id: req.userId})
+    //Get user accounts
+    const accounts = await accountModel.find({userId: req.userId})
+
+    res.status(200).json({
+        id: user.id,
+        name: user.name,
+        username: user.username,
+        accounts: accounts
+    })
+
+})
 module.exports = router;
